# car-geo

./: 404.html  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  index.html
.github/workflows/: deploy.yml
assets/dioxus/: car-geo.js  car-geo.js.br  car-geo_bg.wasm  car-geo_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: main.rs  measure.rs
