[package]
name = "car-geo"
version = "0.1.1"
authors = ["Charles-Henri Mousset <ch.mousset@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
dioxus_bulma = { version = "0.1.1", git = "https://github.com/chmousset/rs-dioxus-bulma.git" }
web-sys = { version = "0.3.69", features = ["FocusEvent"] }

# Debug
dioxus-logger = "0.5.1"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
